--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "react": "^16.0.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.0.0",
+    "react-icons": "^3.10.0",
     "react-scripts": "1.0.14",
     "react-test-renderer": "^16.0.0"
   },
